make log names consistent

--- a/apache2/prod/web/sites/001-www.alberguesjuveniles.com.conf
+++ b/apache2/prod/web/sites/001-www.alberguesjuveniles.com.conf
@@ -13,8 +13,8 @@
         	Allow from 92.243.16.182
 	</Directory>
 
-	CustomLog /opt/logs/alberguesjuveniles.com-access.log combined
-	ErrorLog /opt/logs/alberguesjuveniles.com-error.log
+	CustomLog /opt/logs/www.alberguesjuveniles.com-access.log combined
+	ErrorLog /opt/logs/www.alberguesjuveniles.com-error.log
 	LogLevel warn
 
 </VirtualHost>
