--- a/apache2/prod/web/sites/002-www.auberges.com.conf
+++ b/apache2/prod/web/sites/002-www.auberges.com.conf
@@ -13,8 +13,8 @@
 		Allow from 92.243.16.182
 	</Directory>
 
-	CustomLog /opt/logs/auberges.com-access.log combined
-        ErrorLog /opt/logs/auberges.com-error.log
+	CustomLog /opt/logs/www.auberges.com-access.log combined
+        ErrorLog /opt/logs/www.auberges.com-error.log
         LogLevel warn
 
 </VirtualHost>
