--- a/apache2/prod/web/sites/003-www.hostales.com.conf
+++ b/apache2/prod/web/sites/003-www.hostales.com.conf
@@ -13,8 +13,8 @@
         	Allow from 92.243.16.182
 	</Directory>
 
-        CustomLog /opt/logs/hostales.com-access.log combined
-        ErrorLog /opt/logs/hostales.com-error.log
+        CustomLog /opt/logs/www.hostales.com-access.log combined
+        ErrorLog /opt/logs/www.hostales.com-error.log
         LogLevel warn
 
 </VirtualHost>
