--- a/apache2/prod/web/sites/004-www.youth-hostel.com.conf
+++ b/apache2/prod/web/sites/004-www.youth-hostel.com.conf
@@ -13,8 +13,8 @@
         	Allow from 92.243.16.182
 	</Directory>
 
-        CustomLog /opt/logs/youth-hostel.com-access.log combined
-        ErrorLog /opt/logs/youth-hostel.com-error.log
+        CustomLog /opt/logs/www.youth-hostel.com-access.log combined
+        ErrorLog /opt/logs/www.youth-hostel.com-error.log
         LogLevel warn
 
 </VirtualHost>
