--- a/apache2/prod/web/sites/008-www.jugendherbergen.eu.conf
+++ b/apache2/prod/web/sites/008-www.jugendherbergen.eu.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/jugendherbergen.eu-access.log combined
-        ErrorLog /opt/logs/jugendherbergen.eu-error.log
+        CustomLog /opt/logs/www.jugendherbergen.eu-access.log combined
+        ErrorLog /opt/logs/www.jugendherbergen.eu-error.log
         LogLevel warn
 
 </VirtualHost>
