--- a/apache2/prod/web/sites/010-www.pousadasdejuventude.com.conf
+++ b/apache2/prod/web/sites/010-www.pousadasdejuventude.com.conf
@@ -14,8 +14,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/pousadasdejuventude.com-access.log combined
-        ErrorLog /opt/logs/pousadasdejuventude.com-error.log
+        CustomLog /opt/logs/www.pousadasdejuventude.com-access.log combined
+        ErrorLog /opt/logs/www.pousadasdejuventude.com-error.log
         LogLevel warn
     
 </VirtualHost>
