--- a/apache2/prod/web/sites/011-www.alberguesjuveniles.es.conf
+++ b/apache2/prod/web/sites/011-www.alberguesjuveniles.es.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/alberguesjuveniles.es-access.log combined
-        ErrorLog /opt/logs/alberguesjuveniles.es-error.log
+        CustomLog /opt/logs/www.alberguesjuveniles.es-access.log combined
+        ErrorLog /opt/logs/www.alberguesjuveniles.es-error.log
         LogLevel warn
 
 </VirtualHost>
