--- a/apache2/prod/web/sites/013-www.hostels.in.conf
+++ b/apache2/prod/web/sites/013-www.hostels.in.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/hostels.in-access.log combined
-        ErrorLog /opt/logs/hostels.in-error.log
+        CustomLog /opt/logs/www.hostels.in-access.log combined
+        ErrorLog /opt/logs/www.hostels.in-error.log
         LogLevel warn    
 
 </VirtualHost>
