--- a/apache2/prod/web/sites/016-www.youth-hostels.hk.conf
+++ b/apache2/prod/web/sites/016-www.youth-hostels.hk.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/youth-hostels.hk-access.log combined
-         ErrorLog /opt/logs/youth-hostels.hk-error.log
+        CustomLog /opt/logs/www.youth-hostels.hk-access.log combined
+         ErrorLog /opt/logs/www.youth-hostels.hk-error.log
         LogLevel warn
 
 </VirtualHost>
