--- a/apache2/prod/web/sites/018-www.aubergesdejeunesse.ca.conf
+++ b/apache2/prod/web/sites/018-www.aubergesdejeunesse.ca.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/aubergesdejeunesse.ca-access.log combined
-        ErrorLog /opt/logs/aubergesdejeunesse.ca-error.log
+        CustomLog /opt/logs/www.aubergesdejeunesse.ca-access.log combined
+        ErrorLog /opt/logs/www.aubergesdejeunesse.ca-error.log
         LogLevel warn
     
 </VirtualHost>
