--- a/apache2/prod/web/sites/019-www.hostele.com.conf
+++ b/apache2/prod/web/sites/019-www.hostele.com.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/hostele.com-access.log combined
-        ErrorLog /opt/logs/hostele.com-error.log
+        CustomLog /opt/logs/www.hostele.com-access.log combined
+        ErrorLog /opt/logs/www.hostele.com-error.log
         LogLevel warn
 
 </VirtualHost>
