--- a/apache2/prod/web/sites/024-www.aubergesdejeunesse.com.conf
+++ b/apache2/prod/web/sites/024-www.aubergesdejeunesse.com.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/aubergesdejeunesse.com-access.log combined
-        ErrorLog /opt/logs/aubergesdejeunesse.com-error.log
+        CustomLog /opt/logs/www.aubergesdejeunesse.com-access.log combined
+        ErrorLog /opt/logs/www.aubergesdejeunesse.com-error.log
         LogLevel warn
  
 
