--- a/apache2/prod/web/sites/029-www.mladeznickeubytovny.com.conf
+++ b/apache2/prod/web/sites/029-www.mladeznickeubytovny.com.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/mladeznickeubytovny.com-access.log combined
-        ErrorLog /opt/logs/mladeznickeubytovny.com-error.log
+        CustomLog /opt/logs/www.mladeznickeubytovny.com-access.log combined
+        ErrorLog /opt/logs/www.mladeznickeubytovny.com-error.log
         LogLevel warn
 
 </VirtualHost>
