--- a/apache2/prod/web/sites/030-www.ifjusagiszallasok.com.conf
+++ b/apache2/prod/web/sites/030-www.ifjusagiszallasok.com.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/ifjusagiszallasok.com-access.log combined
-        ErrorLog /opt/logs/ifjusagiszallasok.com-error.log
+        CustomLog /opt/logs/www.ifjusagiszallasok.com-access.log combined
+        ErrorLog /opt/logs/www.ifjusagiszallasok.com-error.log
         LogLevel warn 
 
 </VirtualHost>
