--- a/apache2/prod/web/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/prod/web/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/xn--e1amhmfp1c.xn--p1ai-access.log combined
-        ErrorLog /opt/logs/xn--e1amhmfp1c.xn--p1ai-error.log
+        CustomLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-access.log combined
+        ErrorLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-error.log
         LogLevel warn
     
 
