--- a/apache2/prod/web/sites/036-www.youth-hostels.eu.conf
+++ b/apache2/prod/web/sites/036-www.youth-hostels.eu.conf
@@ -12,8 +12,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/youth-hostels.eu-access.log combined
-        ErrorLog /opt/logs/youth-hostels.eu-error.log
+        CustomLog /opt/logs/www.youth-hostels.eu-access.log combined
+        ErrorLog /opt/logs/www.youth-hostels.eu-error.log
         LogLevel warn
 
 </VirtualHost>
