--- a/apache2/prod/web/sites/039-www.hostels.jp.conf
+++ b/apache2/prod/web/sites/039-www.hostels.jp.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/hostels.jp-access.log combined
-        ErrorLog /opt/logs/hostels.jp-error.log
+        CustomLog /opt/logs/www.hostels.jp-access.log combined
+        ErrorLog /opt/logs/www.hostels.jp-error.log
         LogLevel warn
 
 </VirtualHost>
