--- a/apache2/prod/web/sites/040-www.hostels.mobi.conf
+++ b/apache2/prod/web/sites/040-www.hostels.mobi.conf
@@ -12,8 +12,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/hostels.mobi-access.log combined
-        ErrorLog /opt/logs/hostels.mobi-error.log
+        CustomLog /opt/logs/www.hostels.mobi-access.log combined
+        ErrorLog /opt/logs/www.hostels.mobi-error.log
         LogLevel warn
 
 </VirtualHost>
