--- a/apache2/prod/web/sites/041-www.nofeeshostels.com.conf
+++ b/apache2/prod/web/sites/041-www.nofeeshostels.com.conf
@@ -12,8 +12,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/nofeeshostels.com-access.log combined
-        ErrorLog /opt/logs/nofeeshostels.com-error.log
+        CustomLog /opt/logs/www.nofeeshostels.com-access.log combined
+        ErrorLog /opt/logs/www.nofeeshostels.com-error.log
         LogLevel warn    
 
 </VirtualHost>
