--- a/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/alberguesdajuventude.com-access.log combined
-        ErrorLog /opt/logs/alberguesdajuventude.com-error.log
+        CustomLog /opt/logs/www.alberguesdajuventude.com-access.log combined
+        ErrorLog /opt/logs/www.alberguesdajuventude.com-error.log
         LogLevel warn
         
 </VirtualHost>
