--- a/apache2/prod/web/sites/009-www.youth-hostels.kr.conf
+++ b/apache2/prod/web/sites/009-www.youth-hostels.kr.conf
@@ -13,8 +13,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/youth-hostels.kr-access.log combined
-        ErrorLog /opt/logs/youth-hostels.kr-error.log
+        CustomLog /opt/logs/www.youth-hostels.kr-access.log combined
+        ErrorLog /opt/logs/www.youth-hostels.kr-error.log
         LogLevel warn
 
 </VirtualHost>
