--- a/apache2/prod/web/sites/014-www.youth-hostels.co.uk.conf
+++ b/apache2/prod/web/sites/014-www.youth-hostels.co.uk.conf
@@ -14,8 +14,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/youth-hostels.co.uk-access.log combined
-      	 ErrorLog /opt/logs/youth-hostels.co.uk-error.log
+        CustomLog /opt/logs/www.youth-hostels.co.uk-access.log combined
+      	 ErrorLog /opt/logs/www.youth-hostels.co.uk-error.log
         LogLevel warn
 
 </VirtualHost>
