--- a/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -12,8 +12,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/xn--xn2by4qtje86kn5ezmb.kr-access.log combined
-        ErrorLog /opt/logs/xn--xn2by4qtje86kn5ezmb.kr-error.log
+        CustomLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-access.log combined
+        ErrorLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-error.log
         LogLevel warn
 
 </VirtualHost>
