--- a/apache2/prod/web/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/web/sites/044-www.hwsitetest.com.conf
@@ -11,8 +11,8 @@
                 Allow from 92.243.16.182
         </Directory>
 
-        CustomLog /opt/logs/hbsitetest.com-access.log combined
-        ErrorLog /opt/logs/hbsitetest.com-error.log
+        CustomLog /opt/logs/www.hbsitetest.com-access.log combined
+        ErrorLog /opt/logs/www.hbsitetest.com-error.log
         LogLevel warn
 
 </VirtualHost>
