add IP address for LB

--- a/apache2/prod/web/sites/013-www.hostels.in.conf
+++ b/apache2/prod/web/sites/013-www.hostels.in.conf
@@ -10,7 +10,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from 92.243.16.182
+                Allow from 92.243.16.182 95.142.170.59
         </Directory>
 
         CustomLog /opt/logs/www.hostels.in-access.log combined
