--- a/apache2/prod/web/sites/040-www.hostels.mobi.conf
+++ b/apache2/prod/web/sites/040-www.hostels.mobi.conf
@@ -9,7 +9,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from 92.243.16.182
+                Allow from 92.243.16.182 95.142.170.59
         </Directory>
 
         CustomLog /opt/logs/www.hostels.mobi-access.log combined
