--- a/apache2/prod/ssloffloader/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/prod/ssloffloader/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -3,6 +3,8 @@
     
     	SSLEngine on
     	
+    	RequestHeader set HTTPS "on"
+    	
         SSLCertificateFile      /opt/certificates/xn--e1amhmfp1c.xn--p1ai.crt
         SSLCertificateKeyFile   /opt/certificates/xn--e1amhmfp1c.xn--p1ai.key
         SSLCertificateChainFile /opt/certificates/xn--e1amhmfp1c.xn--p1ai.ca-bundle
