--- a/apache2/prod/ssloffloader/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/ssloffloader/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -2,6 +2,8 @@
 	ProxyPass / http://balancer.proxy:8080/
      
     	SSLEngine on
+
+    	RequestHeader set HTTPS "on"
     	
     	SSLCertificateFile      /opt/certificates/xn--xn2by4qtje86kn5ezmb.kr.crt
 	SSLCertificateKeyFile   /opt/certificates/xn--xn2by4qtje86kn5ezmb.kr.key
