--- a/apache2/prod/lb/sites/003-www.hostales.com.conf
+++ b/apache2/prod/lb/sites/003-www.hostales.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostales.com
-	ServerAlias hostales.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostales.com-error.log
 	CustomLog /opt/logs/www.hostales.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostales.com
+    Redirect permanent / http://www.hostales.com/
 </VirtualHost>
