--- a/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
+++ b/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostel.com
-	ServerAlias youth-hostel.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostel.com-error.log
 	CustomLog /opt/logs/www.youth-hostel.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostel.com
+    Redirect permanent / http://www.youth-hostel.com/
 </VirtualHost>
