--- a/apache2/prod/lb/sites/006-www.ostellidellagioventu.com.conf
+++ b/apache2/prod/lb/sites/006-www.ostellidellagioventu.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.ostellidellagioventu.com
-	ServerAlias ostellidellagioventu.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.ostellidellagioventu.com-error.log
 	CustomLog /opt/logs/www.ostellidellagioventu.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName ostellidellagioventu.com
+    Redirect permanent / http://www.ostellidellagioventu.com/
 </VirtualHost>
