--- a/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
+++ b/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.kr
-	ServerAlias youth-hostels.kr
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.kr-error.log
 	CustomLog /opt/logs/www.youth-hostels.kr-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.kr
+    Redirect permanent / http://www.youth-hostels.kr/
 </VirtualHost>
