--- a/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
+++ b/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.hk
-	ServerAlias youth-hostels.hk
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.hk-error.log
 	CustomLog /opt/logs/www.youth-hostels.hk-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.hk
+    Redirect permanent / http://www.youth-hostels.hk/
 </VirtualHost>
