--- a/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
+++ b/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.ca
-	ServerAlias youth-hostels.ca
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ca-error.log
 	CustomLog /opt/logs/www.youth-hostels.ca-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.ca
+    Redirect permanent / http://www.youth-hostels.ca/
 </VirtualHost>
