--- a/apache2/prod/lb/sites/019-www.hostele.com.conf
+++ b/apache2/prod/lb/sites/019-www.hostele.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostele.com
-	ServerAlias hostele.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostele.com-error.log
 	CustomLog /opt/logs/www.hostele.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostele.com
+    Redirect permanent / http://www.hostele.com/
 </VirtualHost>
