--- a/apache2/prod/lb/sites/023-www.schroniskamlodziezowe.com.conf
+++ b/apache2/prod/lb/sites/023-www.schroniskamlodziezowe.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.schroniskamlodziezowe.com
-	ServerAlias schroniskamlodziezowe.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.schroniskamlodziezowe.com-error.log
 	CustomLog /opt/logs/www.schroniskamlodziezowe.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName schroniskamlodziezowe.com
+    Redirect permanent / http://www.schroniskamlodziezowe.com/
 </VirtualHost>
