--- a/apache2/prod/lb/sites/027-www.herbergen.com.conf
+++ b/apache2/prod/lb/sites/027-www.herbergen.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.herbergen.com
-	ServerAlias herbergen.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.herbergen.com-error.log
 	CustomLog /opt/logs/www.herbergen.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName herbergen.com
+    Redirect permanent / http://www.herbergen.com/
 </VirtualHost>
