--- a/apache2/prod/lb/sites/028-www.hostelleja.com.conf
+++ b/apache2/prod/lb/sites/028-www.hostelleja.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostelleja.com
-	ServerAlias hostelleja.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelleja.com-error.log
 	CustomLog /opt/logs/www.hostelleja.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostelleja.com
+    Redirect permanent / http://www.hostelleja.com/
 </VirtualHost>
