--- a/apache2/prod/lb/sites/035-www.youth-hostels.co.nz.conf
+++ b/apache2/prod/lb/sites/035-www.youth-hostels.co.nz.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.co.nz
-	ServerAlias youth-hostels.co.nz
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.co.nz-error.log
 	CustomLog /opt/logs/www.youth-hostels.co.nz-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.co.nz
+    Redirect permanent / http://www.youth-hostels.co.nz/
 </VirtualHost>
