--- a/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
+++ b/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.eu
-	ServerAlias youth-hostels.eu
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.eu-error.log
 	CustomLog /opt/logs/www.youth-hostels.eu-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.eu
+    Redirect permanent / http://www.youth-hostels.eu/
 </VirtualHost>
