--- a/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
+++ b/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.asia
-	ServerAlias youth-hostels.asia
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.asia-error.log
 	CustomLog /opt/logs/www.youth-hostels.asia-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.asia
+    Redirect permanent / http://www.youth-hostels.asia/
 </VirtualHost>
