--- a/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>	
 	ServerName www.hwsitetest.com
-	ServerAlias hwsitetest.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hwsitetest.com-error.log
 	CustomLog /opt/logs/www.hwsitetest.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hwsitetest.com
+    Redirect permanent / http://www.hwsitetest.com/
 </VirtualHost>
