--- a/apache2/prod/lb/sites/001-www.alberguesjuveniles.com.conf
+++ b/apache2/prod/lb/sites/001-www.alberguesjuveniles.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesjuveniles.com
-	ServerAlias alberguesjuveniles.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesjuveniles.com-error.log
 	CustomLog /opt/logs/www.alberguesjuveniles.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName alberguesjuveniles.com
+    Redirect permanent / http://www.alberguesjuveniles.com/
 </VirtualHost>
