--- a/apache2/prod/lb/sites/002-www.auberges.com.conf
+++ b/apache2/prod/lb/sites/002-www.auberges.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.auberges.com
-	ServerAlias auberges.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.auberges.com-error.log
 	CustomLog /opt/logs/www.auberges.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName auberges.com
+    Redirect permanent / http://www.auberges.com/
 </VirtualHost>
