--- a/apache2/prod/lb/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/prod/lb/sites/005-www.alberguesdajuventude.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesdajuventude.com
-	ServerAlias alberguesdajuventude.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesdajuventude.com-error.log
 	CustomLog /opt/logs/www.alberguesdajuventude.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName alberguesdajuventude.com
+    Redirect permanent / http://www.alberguesdajuventude.com/
 </VirtualHost>
