--- a/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
+++ b/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.jugendherbergen.eu
-	ServerAlias jugendherbergen.eu
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.jugendherbergen.eu-error.log
 	CustomLog /opt/logs/www.jugendherbergen.eu-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName jugendherbergen.eu
+    Redirect permanent / http://www.jugendherbergen.eu/
 </VirtualHost>
