--- a/apache2/prod/lb/sites/010-www.pousadasdejuventude.com.conf
+++ b/apache2/prod/lb/sites/010-www.pousadasdejuventude.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.pousadasdejuventude.com
-	ServerAlias pousadasdejuventude.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.pousadasdejuventude.com-error.log
 	CustomLog /opt/logs/www.pousadasdejuventude.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName pousadasdejuventude.com
+    Redirect permanent / http://www.pousadasdejuventude.com/
 </VirtualHost>
