--- a/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
+++ b/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesjuveniles.es
-	ServerAlias alberguesjuveniles.es
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesjuveniles.es-error.log
 	CustomLog /opt/logs/www.alberguesjuveniles.es-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName alberguesjuveniles.es
+    Redirect permanent / http://www.alberguesjuveniles.es/
 </VirtualHost>
