--- a/apache2/prod/lb/sites/013-www.hostels.in.conf
+++ b/apache2/prod/lb/sites/013-www.hostels.in.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostels.in
-	ServerAlias hostels.in
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.in-error.log
 	CustomLog /opt/logs/www.hostels.in-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostels.in
+    Redirect permanent / http://www.hostels.in/
 </VirtualHost>
