--- a/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
+++ b/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.co.uk
-	ServerAlias youth-hostels.co.uk
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.co.uk-error.log
 	CustomLog /opt/logs/www.youth-hostels.co.uk-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.co.uk
+    Redirect permanent / http://www.youth-hostels.co.uk/
 </VirtualHost>
