--- a/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
+++ b/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.aubergesdejeunesse.ca
-	ServerAlias aubergesdejeunesse.ca
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.aubergesdejeunesse.ca-error.log
 	CustomLog /opt/logs/www.aubergesdejeunesse.ca-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName aubergesdejeunesse.ca
+    Redirect permanent / http://www.aubergesdejeunesse.ca/
 </VirtualHost>
