--- a/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
+++ b/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.ru
-	ServerAlias youth-hostels.ru
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ru-error.log
 	CustomLog /opt/logs/www.youth-hostels.ru-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.ru
+    Redirect permanent / http://www.youth-hostels.ru/
 </VirtualHost>
