--- a/apache2/prod/lb/sites/022-www.hostelek.com.conf
+++ b/apache2/prod/lb/sites/022-www.hostelek.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostelek.com
-	ServerAlias hostelek.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelek.com-error.log
 	CustomLog /opt/logs/www.hostelek.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostelek.com
+    Redirect permanent / http://www.hostelek.com/
 </VirtualHost>
