--- a/apache2/prod/lb/sites/024-www.aubergesdejeunesse.com.conf
+++ b/apache2/prod/lb/sites/024-www.aubergesdejeunesse.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.aubergesdejeunesse.com
-	ServerAlias aubergesdejeunesse.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.aubergesdejeunesse.com-error.log
 	CustomLog /opt/logs/www.aubergesdejeunesse.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName aubergesdejeunesse.com
+    Redirect permanent / http://www.aubergesdejeunesse.com/
 </VirtualHost>
