--- a/apache2/prod/lb/sites/025-www.retkeilymajoja.com.conf
+++ b/apache2/prod/lb/sites/025-www.retkeilymajoja.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.retkeilymajoja.com
-	ServerAlias retkeilymajoja.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.retkeilymajoja.com-error.log
 	CustomLog /opt/logs/www.retkeilymajoja.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName retkeilymajoja.com
+    Redirect permanent / http://www.retkeilymajoja.com/
 </VirtualHost>
