--- a/apache2/prod/lb/sites/026-www.hostely.com.conf
+++ b/apache2/prod/lb/sites/026-www.hostely.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostely.com
-	ServerAlias hostely.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostely.com-error.log
 	CustomLog /opt/logs/www.hostely.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostely.com
+    Redirect permanent / http://www.hostely.com/
 </VirtualHost>
