--- a/apache2/prod/lb/sites/030-www.ifjusagiszallasok.com.conf
+++ b/apache2/prod/lb/sites/030-www.ifjusagiszallasok.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.ifjusagiszallasok.com
-	ServerAlias ifjusagiszallasok.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.ifjusagiszallasok.com-error.log
 	CustomLog /opt/logs/www.ifjusagiszallasok.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName ifjusagiszallasok.com
+    Redirect permanent / http://www.ifjusagiszallasok.com/
 </VirtualHost>
