--- a/apache2/prod/lb/sites/032-www.hosteis.com.conf
+++ b/apache2/prod/lb/sites/032-www.hosteis.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hosteis.com
-	ServerAlias hosteis.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hosteis.com-error.log
 	CustomLog /opt/logs/www.hosteis.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hosteis.com
+    Redirect permanent / http://www.hosteis.com/
 </VirtualHost>
