--- a/apache2/prod/lb/sites/033-www.hostelli.com.conf
+++ b/apache2/prod/lb/sites/033-www.hostelli.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostelli.com
-	ServerAlias hostelli.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelli.com-error.log
 	CustomLog /opt/logs/www.hostelli.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostelli.com
+    Redirect permanent / http://www.hostelli.com/
 </VirtualHost>
