--- a/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
+++ b/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.ie
-	ServerAlias youth-hostels.ie
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ie-error.log
 	CustomLog /opt/logs/www.youth-hostels.ie-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.ie
+    Redirect permanent / http://www.youth-hostels.ie/
 </VirtualHost>
