--- a/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
+++ b/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.cn
-	ServerAlias youth-hostels.cn
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.cn-error.log
 	CustomLog /opt/logs/www.youth-hostels.cn-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName youth-hostels.cn
+    Redirect permanent / http://www.youth-hostels.cn/
 </VirtualHost>
