--- a/apache2/prod/lb/sites/039-www.hostels.jp.conf
+++ b/apache2/prod/lb/sites/039-www.hostels.jp.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostels.jp
-	ServerAlias hostels.jp
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.jp-error.log
 	CustomLog /opt/logs/www.hostels.jp-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostels.jp
+    Redirect permanent / http://www.hostels.jp/
 </VirtualHost>
