--- a/apache2/prod/lb/sites/040-www.hostels.mobi.conf
+++ b/apache2/prod/lb/sites/040-www.hostels.mobi.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.hostels.mobi
-	ServerAlias hostels.mobi
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.mobi-error.log
 	CustomLog /opt/logs/www.hostels.mobi-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hostels.mobi
+    Redirect permanent / http://www.hostels.mobi/
 </VirtualHost>
