--- a/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
+++ b/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.nofeeshostels.com
-	ServerAlias nofeeshostels.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.nofeeshostels.com-error.log
 	CustomLog /opt/logs/www.nofeeshostels.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName nofeeshostels.com
+    Redirect permanent / http://www.nofeeshostels.com/
 </VirtualHost>
