--- a/apache2/prod/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>
 	ServerName www.xn--xn2by4qtje86kn5ezmb.kr
-	ServerAlias xn--xn2by4qtje86kn5ezmb.kr
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-error.log
 	CustomLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName xn--xn2by4qtje86kn5ezmb.kr
+    Redirect permanent / http://www.xn--xn2by4qtje86kn5ezmb.kr/
 </VirtualHost>
