--- a/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
+++ b/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
@@ -1,6 +1,5 @@
 <VirtualHost balancer.proxy:8080>	
 	ServerName www.hbsitetest.com
-	ServerAlias hbsitetest.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -16,4 +15,8 @@
 	</IfModule>
 	ErrorLog /opt/logs/www.hbsitetest.com-error.log
 	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
+</VirtualHost>
+<VirtualHost balancer.proxy:8080>
+    ServerName hbsitetest.com
+    Redirect permanent / http://www.hbsitetest.com/
 </VirtualHost>
