updated gitignore to ignore cache

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 #      Application       #
 ##########################
 
+/cache/fr*
+/cache/en*
 /web/ci/cache_queries/aj_ci/model/+*
 /web/ci/cache_queries/azure/*
 /web/ci/cache_queries/azure/!placeholder.txt
