--- a/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
+++ b/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.co.uk
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.co.uk-error.log
 	CustomLog /opt/logs/www.youth-hostels.co.uk-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.co.uk
     Redirect permanent / http://www.youth-hostels.co.uk/
 </VirtualHost>
