--- a/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
+++ b/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.ru
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.ru-error.log
 	CustomLog /opt/logs/www.youth-hostels.ru-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.ru
     Redirect permanent / http://www.youth-hostels.ru/
 </VirtualHost>
