--- a/apache2/prod/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/prod/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.xn--e1amhmfp1c.xn--p1ai
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-error.log
 	CustomLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName xn--e1amhmfp1c.xn--p1ai
     Redirect permanent / http://www.xn--e1amhmfp1c.xn--p1ai/
 </VirtualHost>
