--- a/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
+++ b/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.nofeeshostels.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.nofeeshostels.com-error.log
 	CustomLog /opt/logs/www.nofeeshostels.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName nofeeshostels.com
     Redirect permanent / http://www.nofeeshostels.com/
 </VirtualHost>
