--- a/apache2/prod/ssloffloader/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/prod/ssloffloader/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -1,5 +1,5 @@
 <VirtualHost 95.142.170.59:443>
-	ProxyPass / http://balancer.proxy:8080/
+	ProxyPass / http://127.0.0.1:8080/
     
     	SSLEngine on
     	
