--- a/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
+++ b/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostel.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostel.com-error.log
 	CustomLog /opt/logs/www.youth-hostel.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostel.com
     Redirect permanent / http://www.youth-hostel.com/
 </VirtualHost>
