--- a/apache2/prod/lb/sites/007-www.youth-hostels.jp.conf
+++ b/apache2/prod/lb/sites/007-www.youth-hostels.jp.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.jp
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.jp-error.log
 	CustomLog /opt/logs/www.youth-hostels.jp-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.jp
     Redirect permanent / http://www.youth-hostels.jp/
 </VirtualHost>
