--- a/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
+++ b/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.jugendherbergen.eu
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.jugendherbergen.eu-error.log
 	CustomLog /opt/logs/www.jugendherbergen.eu-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName jugendherbergen.eu
     Redirect permanent / http://www.jugendherbergen.eu/
 </VirtualHost>
