--- a/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
+++ b/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.kr
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.kr-error.log
 	CustomLog /opt/logs/www.youth-hostels.kr-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.kr
     Redirect permanent / http://www.youth-hostels.kr/
 </VirtualHost>
