--- a/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
+++ b/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.alberguesjuveniles.es
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.alberguesjuveniles.es-error.log
 	CustomLog /opt/logs/www.alberguesjuveniles.es-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName alberguesjuveniles.es
     Redirect permanent / http://www.alberguesjuveniles.es/
 </VirtualHost>
