--- a/apache2/prod/lb/sites/013-www.hostels.in.conf
+++ b/apache2/prod/lb/sites/013-www.hostels.in.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.hostels.in
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hostels.in-error.log
 	CustomLog /opt/logs/www.hostels.in-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hostels.in
     Redirect permanent / http://www.hostels.in/
 </VirtualHost>
