--- a/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
+++ b/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.hk
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.hk-error.log
 	CustomLog /opt/logs/www.youth-hostels.hk-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.hk
     Redirect permanent / http://www.youth-hostels.hk/
 </VirtualHost>
