--- a/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
+++ b/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.ca
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.ca-error.log
 	CustomLog /opt/logs/www.youth-hostels.ca-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.ca
     Redirect permanent / http://www.youth-hostels.ca/
 </VirtualHost>
