--- a/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
+++ b/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.aubergesdejeunesse.ca
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.aubergesdejeunesse.ca-error.log
 	CustomLog /opt/logs/www.aubergesdejeunesse.ca-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName aubergesdejeunesse.ca
     Redirect permanent / http://www.aubergesdejeunesse.ca/
 </VirtualHost>
