--- a/apache2/prod/lb/sites/019-www.hostele.com.conf
+++ b/apache2/prod/lb/sites/019-www.hostele.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.hostele.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hostele.com-error.log
 	CustomLog /opt/logs/www.hostele.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hostele.com
     Redirect permanent / http://www.hostele.com/
 </VirtualHost>
