--- a/apache2/prod/lb/sites/032-www.hosteis.com.conf
+++ b/apache2/prod/lb/sites/032-www.hosteis.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.hosteis.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hosteis.com-error.log
 	CustomLog /opt/logs/www.hosteis.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hosteis.com
     Redirect permanent / http://www.hosteis.com/
 </VirtualHost>
