--- a/apache2/prod/lb/sites/033-www.hostelli.com.conf
+++ b/apache2/prod/lb/sites/033-www.hostelli.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.hostelli.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hostelli.com-error.log
 	CustomLog /opt/logs/www.hostelli.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hostelli.com
     Redirect permanent / http://www.hostelli.com/
 </VirtualHost>
