--- a/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
+++ b/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.ie
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.ie-error.log
 	CustomLog /opt/logs/www.youth-hostels.ie-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.ie
     Redirect permanent / http://www.youth-hostels.ie/
 </VirtualHost>
