--- a/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
+++ b/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.eu
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.eu-error.log
 	CustomLog /opt/logs/www.youth-hostels.eu-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.eu
     Redirect permanent / http://www.youth-hostels.eu/
 </VirtualHost>
