--- a/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
+++ b/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.asia
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.asia-error.log
 	CustomLog /opt/logs/www.youth-hostels.asia-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.asia
     Redirect permanent / http://www.youth-hostels.asia/
 </VirtualHost>
