--- a/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
+++ b/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.youth-hostels.cn
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.youth-hostels.cn-error.log
 	CustomLog /opt/logs/www.youth-hostels.cn-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName youth-hostels.cn
     Redirect permanent / http://www.youth-hostels.cn/
 </VirtualHost>
