--- a/apache2/prod/lb/sites/040-www.hostels.mobi.conf
+++ b/apache2/prod/lb/sites/040-www.hostels.mobi.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
 	ServerName www.hostels.mobi
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hostels.mobi-error.log
 	CustomLog /opt/logs/www.hostels.mobi-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hostels.mobi
     Redirect permanent / http://www.hostels.mobi/
 </VirtualHost>
