--- a/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
+++ b/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>	
+<VirtualHost 127.0.0.1:8080>	
 	ServerName www.hbsitetest.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hbsitetest.com-error.log
 	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hbsitetest.com
     Redirect permanent / http://www.hbsitetest.com/
 </VirtualHost>
