--- a/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost balancer.proxy:8080>	
+<VirtualHost 127.0.0.1:8080>	
 	ServerName www.hwsitetest.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
@@ -16,7 +16,7 @@
 	ErrorLog /opt/logs/www.hwsitetest.com-error.log
 	CustomLog /opt/logs/www.hwsitetest.com-access.log combined
 </VirtualHost>
-<VirtualHost balancer.proxy:8080>
+<VirtualHost 127.0.0.1:8080>
     ServerName hwsitetest.com
     Redirect permanent / http://www.hwsitetest.com/
 </VirtualHost>
