--- a/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -9,7 +9,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from 92.243.16.182 95.142.170.59 95.142.170.9
+                Allow from 92.243.16.182 95.142.170.59 95.142.170.9 92.243.23.28
         </Directory>
 
         CustomLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-access.log combined
