--- a/apache2/prod/ssloffloader/sites/024-www.aubergesdejeunesse.com.conf
+++ b/apache2/prod/ssloffloader/sites/024-www.aubergesdejeunesse.com.conf
@@ -1,5 +1,9 @@
 <VirtualHost 92.243.23.28:443>
+    RewriteEngine On
+    RewriteOptions Inherit
+
     ProxyPass / http://127.0.0.1:8080/
+
     SSLEngine on
     SSLProtocol all -SSLv2
     SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM
