--- a/apache2/prod/ssloffloader/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/ssloffloader/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -1,4 +1,7 @@
 <VirtualHost 95.142.170.9:443>
+	RewriteEngine On
+	RewriteOptions Inherit
+
 	ProxyPass / http://127.0.0.1:8080/
      
     	SSLEngine on
