Added logins for Sasha Karpin , Alain Chautard & Karim Samir

--- a/apache2/dev/conf/users.conf
+++ b/apache2/dev/conf/users.conf
@@ -4,5 +4,8 @@ github:$apr1$2PqsUOkg$RfSvrKTLnSHv.MObdLtZg.
 jvoisin:I7Q4cxENMHe6M
 ylymar:$apr1$xWHUM5hv$B.XrWDHXUhAQ.Rwz3k/9M0
 rmordecai:$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
+ksamir:$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
+skarpin:$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
+achautard :$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
 tester:$apr1$9zJ4FCqh$ep7oZFRCwg5utdPlZ/rSv.
 cron:owLXt/TNRZM9o
