add usr/pass to dev

--- a/apache2/dev/conf/users.conf
+++ b/apache2/dev/conf/users.conf
@@ -9,3 +9,4 @@ skarpin:$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
 achautard :$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
 tester:$apr1$9zJ4FCqh$ep7oZFRCwg5utdPlZ/rSv.
 cron:owLXt/TNRZM9o
+adrian:$apr1$zYHYq4v7$Rnh0ZoJ7OjobcwVQguZJD/
